fixed white html issue and layout issue

--- a/src/Components/HomePage/style.css
+++ b/src/Components/HomePage/style.css
@@ -1,5 +1,8 @@
-.content {
-    padding: 50px;
-    background: rgba(0, 0, 0, 0.05);
-    border-radius: 4px;
-  }
+.example {
+  margin: 20px 0;
+  margin-bottom: 20px;
+  padding: 30px 50px;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
+}
